force-app/main/default/objects/Account/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <label>Branch Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>