force-app/main/default/objects/Account/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <description>Standaard lijst met branches, gevraagd in de NAW mailing en in APK journey.</description>
    <inlineHelpText>Niet zelf invullen. Standaard lijst met branches, gevraagd in de NAW mailing en in APK journey - is dus door de klant zelf ingevuld.</inlineHelpText>
    <label>Branche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elektronica</fullName>
            </value>
            <value>
                <fullName>Energie/Gas/Water</fullName>
            </value>
            <value>
                <fullName>Facilitaire dienstverlening</fullName>
            </value>
            <value>
                <fullName>Farmacie</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Gezondheidszorg/Welzijn</fullName>
            </value>
            <value>
                <fullName>Handel/Groothandel</fullName>
            </value>
            <value>
                <fullName>Horeca</fullName>
            </value>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>Industrie</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Juridische dienstverlening</fullName>
            </value>
            <value>
                <fullName>Kunst/Cultuur/Entertainment</fullName>
            </value>
            <value>
                <fullName>Landbouw/Bosbouw/Visserij</fullName>
            </value>
            <value>
                <fullName>Makelaardij/Vastgoed</fullName>
            </value>
            <value>
                <fullName>Maritiem</fullName>
            </value>
            <value>
                <fullName>Media/Uitgeverijen/TV</fullName>
            </value>
            <value>
                <fullName>Mode/Textiel/Cosmetica</fullName>
            </value>
            <value>
                <fullName>Onderwijs/Opleiding</fullName>
            </value>
            <value>
                <fullName>Overheid/Non-profit</fullName>
            </value>
            <value>
                <fullName>Overig</fullName>
            </value>
            <value>
                <fullName>Personen vervoer</fullName>
            </value>
            <value>
                <fullName>Reclame/PR/Communicatie</fullName>
            </value>
            <value>
                <fullName>Sport/Recreatie/Toerisme</fullName>
            </value>
            <value>
                <fullName>Techniek</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Transport/Opslag/Distributie</fullName>
            </value>
            <value>
                <fullName>Uitzend/Detachering/W&amp;S</fullName>
            </value>
            <value>
                <fullName>Verzekeringen/Assurantiën</fullName>
            </value>
            <value>
                <fullName>Zakelijke dienstverlening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>