force-app/main/default/objects/Account/fields/Chamber_of_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Chamber_of_Commerce__c</fullName>
    <label>Chamber of Commerce</label>
    <length>20</length>
    <type>Text</type>
</CustomField>