force-app/main/default/objects/Account/fields/Date_of_Termination_Chamber_of_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Termination_Chamber_of_Commerce__c</fullName>
    <label>Date of Termination Chamber of Commerce</label>
    <type>Date</type>
</CustomField>