force-app/main/default/objects/Account/fields/Has_Dutch_Chamber_of_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Has_Dutch_Chamber_of_Commerce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Dutch Chamber of Commerce</label>
    <type>Checkbox</type>
</CustomField>