force-app/main/default/objects/Account/fields/Is_Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main Branch</label>
    <type>Checkbox</type>
</CustomField>