force-app/main/default/objects/Account/fields/Last_Chamber_of_Commerce_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Chamber_of_Commerce_Update__c</fullName>
    <label>Last Chamber of Commerce Update</label>
    <type>DateTime</type>
</CustomField>