force-app/main/default/objects/Account/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>